[package]
name = "orderbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "orderbook"

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"
rand_distr = "0.4.3"

[[bench]]
name = "benchmark"
harness = false
